--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,53 +1,68 @@
-/* General Elements*/
+
 body{
-	background-image: url("../images/background2.jpg");
+	background-image: url("../images/background4.jpg");
 	background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-div{
+
+div {
 	background-color: white;
 	margin: 10px;
-	width: 25%
-}
-div{
 	border: solid 2px antiquewhite;
 	padding: 10px;
 }
-h1, h3, span{
-	font-weight: bold;
-	text-align: center;
+
+.header{
+	background-color: yellow;
+	color: blue;
+	width: 100%;
 }
-h1{
-	font-size: 30pt;
-}
-ol{
-	list-style: decimal inside; 
-}
-ul {
-	list-style: disc inside;
-	text-indent: 20px;
-}
-/* Specfic Elements*/
-div.header, div.food{
-	background-color: #e0e0eb;
-}
-div.header, div.instructions{
+.instructions {
+	background-color: black;
+	color: white;
 	width: 50%;
+	height: 25%;
 }
-/* Classes */
-.numberToMatch, .winsAndLosses{
-	float: left;
-	width: 15%;
-	height: 60px;
-}
+
+
 .userTotal{
 	width: 15%;
 	height: 60px;
 }
-.food{
+.food {
 	clear: both;
+	width: 100%;
+	background-color: gold;
 }
 .foodimage{
-	height: 60px;
+	height: 25%;
+	width: 20%;
 	margin: 10px;
+	border-bottom-color: black;
+	border: 5%;
+
+}
+.match {
+	
+	float: right;
+	margin: 10px 10px 10px 10px;
+	
+}
+
+.playerbutton {
+	float: right;
+	margin: 10px;
+}
+
+.winsAndLosses {
+	background-color: royalblue;
+	color: gold;
+	
+}
+
+.playerbutton, .match {
+	background-color: black;
+	color: whitesmoke;
+
+	
 }
